fix: refine profile settings ux
